# ros2-examples

./: .gitignore  README.md
ros2_ws_src/fairino5_v6_robot_moveit_config/: CMakeLists.txt  package.xml  package.xml.save
ros2_ws_src/fairino5_v6_robot_moveit_config/config/: kinematics.yaml  moveit_controllers.yaml
ros2_ws_src/fairino5_v6_robot_moveit_config/launch/: move_base.launch.py  move_pick_place.launch.py  move_robot.launch.py  move_single_joint.launch.py  mover_base.launch.py  mover_pick_place.launch.py
ros2_ws_src/fairino5_v6_robot_moveit_config/src/: move_base.cpp  move_pick_place.cpp  move_single_joint.cpp  mover_base.cpp  test_move.cpp
