<?xml version="1.0"?>
<package format="3">
  <name>fairino5_v6_robot_moveit_config</name>
  <version>0.3.0</version>
  <description>Handmade MoveIt2 config for Fairino 5 V6</description>
  <maintainer email="lparper@todo.com">Lucia</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_configs_utils</depend>
<depend>trajectory_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
